chore: documenting PUT operation of api
